Se hace correccion de mi nombre, y se agrega enlaces de redes sociales

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                     <div class="col-xxl-8">
                         <div class="text-center my-5">
                             <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">Sobre mi</span></h2>
-                            <p class="lead fw-light mb-4">Mi nombre es Andre Silva Basauri</p>
+                            <p class="lead fw-light mb-4">Mi nombre es Andres Silva Basauri</p>
                             <p class="text-muted">Ingeniero Colegiado con una sólida formación en la carrera de Ingeniería de
                                 Sistemas e Informática, me
                                 especializo en la gestión de sistemas, automatización de procesos y transformación
@@ -378,9 +378,9 @@
                                 y alcanzar los
                                 objetivos establecidos, aportando un alto valor a cada proyecto que participo</p>
                             <div class="d-flex justify-content-center fs-2 gap-4">
-                                <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a>
-                                <a class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
-                                <a class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
+                                <a class="text-gradient" href="https://x.com/andressilvaba"><i class="bi bi-twitter"></i></a>
+                                <a class="text-gradient" href="https://www.linkedin.com/in/andres-silva-basauri/"><i class="bi bi-linkedin"></i></a>
+                                <a class="text-gradient" href="https://github.com/andres-app/"><i class="bi bi-github"></i></a>
                             </div>
                         </div>
                     </div>
