--- a/resume.html
+++ b/resume.html
@@ -26,9 +26,9 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                        <li class="nav-item"><a class="nav-link" href="/resume">Resume</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/projects">Projects</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/resume">Experiencia</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/projects">Projectos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/contact">Contacto</a></li>
                     </ul>
                 </div>
             </div>
@@ -36,14 +36,14 @@
         <!-- Page Content-->
         <div class="container px-5 my-5">
             <div class="text-center mb-5">
-                <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Resume</span></h1>
+                <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Experiencia</span></h1>
             </div>
             <div class="row gx-5 justify-content-center">
                 <div class="col-lg-11 col-xl-9 col-xxl-8">
                     <!-- Experience Section-->
                     <section>
                         <div class="d-flex align-items-center justify-content-between mb-4">
-                            <h2 class="text-primary fw-bolder mb-0">Experience</h2>
+                            <h2 class="text-primary fw-bolder mb-0"></h2>
                             <!-- Download resume button-->
                             <!-- Set the link href target to a PDF file within your project-->
                             <a class="btn btn-primary px-4 py-3" href="assets/resume.pdf" download>
@@ -57,13 +57,13 @@
                                 <div class="row align-items-center gx-5">
                                     <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                         <div class="bg-light p-4 rounded-4">
-                                            <div class="text-primary fw-bolder mb-2">2019 - Present</div>
-                                            <div class="small fw-bolder">Web Developer</div>
-                                            <div class="small text-muted">Stark Industries</div>
-                                            <div class="small text-muted">Los Angeles, CA</div>
+                                            <div class="text-primary fw-bolder mb-2">2024 - Presente</div>
+                                            <div class="small fw-bolder">Desarrollador FullStack</div>
+                                            <div class="small text-muted">Ministerio de Educación</div>
+                                            <div class="small text-muted">Lima, PERU</div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-8"><div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.</div></div>
+                                    <div class="col-lg-8"><div>Como desarrollador Fullstack desarrollé un sistema integrado para la DIGESE del Ministerio de Educación, centralizando datos mediante interoperabilidad con sistemas existentes. Utilicé APIs RESTful y microservicios para sincronización de datos en tiempo real y bases de datos optimizadas para manejar grandes volúmenes. Implementé un dashboard interactivo con React y D3.js, permitiendo a la alta dirección acceder a KPIs actualizados para decisiones estratégicas. Esta solución mejoró la accesibilidad, transparencia y eficiencia en la gestión de información institucional.</div></div>
                                 </div>
                             </div>
                         </div>
@@ -158,7 +158,7 @@
                                 <div class="mb-0">
                                     <div class="d-flex align-items-center mb-4">
                                         <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3"><i class="bi bi-code-slash"></i></div>
-                                        <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Languages</span></h3>
+                                        <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Lenguajes</span></h3>
                                     </div>
                                     <div class="row row-cols-1 row-cols-md-3 mb-4">
                                         <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">PHP</div></div>
