se realiza nuevos cambios

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                         class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                        <li class="nav-item"><a class="nav-link" href="/resume">Sobre mi</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/projects">Projectos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/contact">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link" href="resume.html">Experiencia</a></li>
+                        <li class="nav-item"><a class="nav-link" href="projects.html">Proyectos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
                     </ul>
                 </div>
             </div>
@@ -49,17 +49,16 @@
                         <!-- Header text content-->
                         <div class="text-center text-xxl-start">
                             <div class="badge bg-gradient-primary-to-secondary text-white mb-4">
-                                <div class="text-uppercase">Design &middot; Development &middot; Marketing</div>
+                                <div class="text-uppercase">Development &middot; TI &middot; Support</div>
                             </div>
-                            <div class="fs-3 fw-light text-muted">I can help your business to</div>
-                            <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Get online and
-                                    grow fast</span></h1>
+                            <div class="fs-3 fw-light text-muted">Lleva tu negocio al siguiente nivel</div>
+                            <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Transformación Digital</span></h1>
                             <div
                                 class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
-                                <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder"
-                                    href="resume.html">Sobre mi</a>
+                                <!-- <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder"
+                                    href="resume.html">Sobre mi</a> -->
                                 <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder"
-                                    href="projects.html">Projectos</a>
+                                    href="projects.html">Proyectos</a>
                             </div>
                         </div>
                     </div>
@@ -368,17 +367,9 @@
                         <div class="text-center my-5">
                             <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">Sobre mi</span></h2>
                             <p class="lead fw-light mb-4">Mi nombre es Andres Silva Basauri</p>
-                            <p class="text-muted">Ingeniero Colegiado con una sólida formación en la carrera de Ingeniería de
-                                Sistemas e Informática, me
-                                especializo en la gestión de sistemas, automatización de procesos y transformación
-                                digital.
-                                Mi carrera profesional abarca más de 9 años liderando proyectos y equipos
-                                multidisciplinarios en
-                                empresas globales. Mi enfoque principal radica en satisfacer las necesidades del cliente
-                                y alcanzar los
-                                objetivos establecidos, aportando un alto valor a cada proyecto que participo</p>
+                            <p class="text-muted">Profesional con sólida experiencia en desarrollo de software, especializado en el desarrollo de aplicaciones web eficientes y escalables con mas de 10 años de experiencia. He trabajado tanto en la implementación de soluciones tecnológicas como en la evaluación de calidad (QA), asegurando que cada proyecto cumpla con los más altos estándares. Mi trayectoria incluye roles clave en proyectos de transformación digital, donde he liderado iniciativas que modernizan procesos y optimizan la productividad organizacional.</p>
                             <div class="d-flex justify-content-center fs-2 gap-4">
-                                <a class="text-gradient" href="https://x.com/andressilvaba"><i class="bi bi-twitter"></i></a>
+                                <!-- <a class="text-gradient" href="https://x.com/andressilvaba"><i class="bi bi-twitter"></i></a> -->
                                 <a class="text-gradient" href="https://www.linkedin.com/in/andres-silva-basauri/"><i class="bi bi-linkedin"></i></a>
                                 <a class="text-gradient" href="https://github.com/andres-app/"><i class="bi bi-github"></i></a>
                             </div>
