--- a/projects.html
+++ b/projects.html
@@ -26,9 +26,9 @@
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                            <li class="nav-item"><a class="nav-link" href="/resume">Resume</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/projects">Projects</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link" href="resume.html">Experiencia</a></li>
+                            <li class="nav-item"><a class="nav-link" href="projects.html">Proyectos</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
                         </ul>
                     </div>
                 </div>
@@ -37,7 +37,7 @@
             <section class="py-5">
                 <div class="container px-5 mb-5">
                     <div class="text-center mb-5">
-                        <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Projectos</span></h1>
+                        <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Proyectos</span></h1>
                     </div>
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-11 col-xl-9 col-xxl-8">
@@ -47,9 +47,9 @@
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
                                             <h2 class="fw-bolder">TiquePOS</h2>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <p>"Sistema avanzado de facturación electrónica diseñado para optimizar y automatizar el proceso de emisión de comprobantes electrónicos. Facilita el cumplimiento de las normativas fiscales, ofreciendo una plataforma segura y eficiente para gestionar las ventas y los documentos tributarios. Con TiquePOS, las empresas pueden mejorar su productividad y reducir errores en la facturación, proporcionando una experiencia de usuario intuitiva y confiable."</p>
                                         </div>
-                                        <img class="img-fluid" src="/assets/prueba.png" alt="..." />
+                                        <img class="img-fluid" src="assets/tiquepos.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -57,11 +57,11 @@
                             <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
+                                        <img class="img-fluid" src="assets/peruaprende.png" alt="..." />
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">JapiPOS</h2>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
-                                        </div>
-                                        <img class="img-fluid" src="/assets/prueba.png" alt="..." />
+                                            <h2 class="fw-bolder">Peruaprende</h2>
+                                            <p>"Es una plataforma de cursos en línea que ofrece una amplia variedad de contenidos educativos para fomentar el aprendizaje y el desarrollo profesional. Con una interfaz intuitiva y recursos actualizados, la plataforma permite a los usuarios adquirir nuevas habilidades y conocimientos desde cualquier lugar, adaptándose a sus propios ritmos y horarios. Peruaprende se enfoca en brindar educación accesible y de calidad para potenciar el crecimiento personal y laboral de sus usuarios."</p>
+                                        </div>     
                                     </div>
                                 </div>
                             </div>
@@ -70,15 +70,15 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">RentcarSys</h2>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                            <h2 class="fw-bolder">iRentapp</h2>
+                                            <p>"Es un sistema diseñado para administrar de manera eficiente las reservas de autos de alquiler. Permite a las empresas gestionar su flota, programar reservas y supervisar el estado de cada vehículo en tiempo real. Con una interfaz intuitiva, iRentapp facilita el proceso de alquiler tanto para los administradores como para los clientes, optimizando la disponibilidad de vehículos y asegurando una experiencia de usuario fluida y confiable."</p>
                                         </div>
-                                        <img class="img-fluid" src="/assets/proyecto1.png" alt="..." />
+                                        <img class="img-fluid" src="assets/irentapp.png" alt="..." />
                                     </div>
                                 </div>
                             </div>
                             <!-- Project Card 4-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0">
+                            <!-- <div class="card overflow-hidden shadow rounded-4 border-0">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
@@ -88,7 +88,7 @@
                                         <img class="img-fluid" src="/assets/proyecto2.png" alt="..." />
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
