--- a/projects.html
+++ b/projects.html
@@ -1,122 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Andres Silva Basauri</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Custom Google font-->
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@100;200;300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet" />
-        <!-- Bootstrap icons-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-    </head>
-    <body class="d-flex flex-column h-100 bg-light">
-        <main class="flex-shrink-0">
-            <!-- Navigation-->
-            <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
-                <div class="container px-5">
-                    <a class="navbar-brand" href="/"><span class="fw-bolder text-primary">Andres Silva Basauri</span></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                            <li class="nav-item"><a class="nav-link" href="resume.html">Experiencia</a></li>
-                            <li class="nav-item"><a class="nav-link" href="projects.html">Proyectos</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
-                        </ul>
-                    </div>
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>Andres Silva Basauri</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!-- Custom Google font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
+        rel="stylesheet" />
+    <!-- Bootstrap icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="css/styles.css" rel="stylesheet" />
+</head>
+
+<body class="d-flex flex-column h-100 bg-light">
+    <main class="flex-shrink-0">
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
+            <div class="container px-5">
+                <a class="navbar-brand" href="/"><span class="fw-bolder text-primary">Andres Silva Basauri</span></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation"><span
+                        class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
+                        <li class="nav-item"><a class="nav-link" href="resume.html">Experiencia</a></li>
+                        <li class="nav-item"><a class="nav-link" href="projects.html">Proyectos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
+                    </ul>
                 </div>
-            </nav>
-            <!-- Projects Section-->
-            <section class="py-5">
-                <div class="container px-5 mb-5">
-                    <div class="text-center mb-5">
-                        <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Proyectos</span></h1>
+            </div>
+        </nav>
+        <!-- Projects Section-->
+        <section class="py-5">
+            <div class="container px-5 mb-5">
+                <div class="text-center mb-5">
+                    <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Proyectos</span></h1>
+                </div>
+                <!-- Tabs Navigation -->
+                <ul class="nav nav-tabs justify-content-center mb-4" id="projectsTab" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link active" id="personal-tab" data-bs-toggle="tab"
+                            data-bs-target="#personal" type="button" role="tab" aria-controls="personal"
+                            aria-selected="true">Personales</button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="clients-tab" data-bs-toggle="tab" data-bs-target="#clients"
+                            type="button" role="tab" aria-controls="clients" aria-selected="false">Clientes</button>
+                    </li>
+                </ul>
+                <!-- Tabs Content -->
+                <div class="tab-content" id="projectsTabContent">
+                    <!-- Personal Projects Tab -->
+                    <div class="tab-pane fade show active" id="personal" role="tabpanel" aria-labelledby="personal-tab">
+                        <div class="row gx-5 justify-content-center">
+                            <div class="col-lg-11 col-xl-9 col-xxl-8">
+                                <!-- Project Card 1-->
+                                <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                                    <div class="card-body p-0">
+                                        <div class="d-flex align-items-center">
+                                            <div class="p-5">
+                                                <h2 class="fw-bolder">TiquePOS</h2>
+                                                <p>"Es una aplicación web de facturación electrónica diseñado para
+                                                    optimizar y automatizar el proceso de emisión de comprobantes
+                                                    electrónicos. Facilita el cumplimiento de las normativas fiscales,
+                                                    ofreciendo una plataforma segura y eficiente para gestionar las
+                                                    ventas y los documentos tributarios."</p>
+                                            </div>
+                                            <img class="img-fluid" src="assets/tiquepos.png" alt="..." />
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Project Card 2 -->
+                                <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                                    <div class="card-body p-0">
+                                        <div class="d-flex align-items-center">
+                                            <img class="img-fluid" src="assets/peruaprende.png" alt="..." />
+                                            <div class="p-5">
+                                                <h2 class="fw-bolder">Peruaprende</h2>
+                                                <p>"Es una plataforma de cursos en línea que ofrece una amplia variedad
+                                                    de contenidos educativos para fomentar el aprendizaje y el
+                                                    desarrollo profesional. Con una interfaz intuitiva y recursos
+                                                    actualizados, la plataforma permite a los usuarios adquirir nuevas
+                                                    habilidades y conocimientos desde cualquier lugar, adaptándose a sus
+                                                    propios ritmos y horarios."</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Project Card 3 -->
+                                <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                                    <div class="card-body p-0">
+                                        <div class="d-flex align-items-center">
+                                            <div class="p-5">
+                                                <h2 class="fw-bolder">iRentapp</h2>
+                                                <p>"Es un sistema diseñado para administrar de manera eficiente las
+                                                    reservas de autos de alquiler. Permite a las empresas gestionar su
+                                                    flota, programar reservas y supervisar el estado de cada vehículo en
+                                                    tiempo real. Con una interfaz intuitiva, iRentapp facilita el
+                                                    proceso de alquiler tanto para los administradores como para los
+                                                    clientes, optimizando la disponibilidad de vehículos y asegurando
+                                                    una experiencia de usuario fluida y confiable."</p>
+                                            </div>
+                                            <img class="img-fluid" src="assets/irentapp.png" alt="..." />
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Add other personal project cards as needed -->
+                            </div>
+                        </div>
                     </div>
-                    <div class="row gx-5 justify-content-center">
-                        <div class="col-lg-11 col-xl-9 col-xxl-8">
-                            <!-- Project Card 1-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
-                                <div class="card-body p-0">
-                                    <div class="d-flex align-items-center">
-                                        <div class="p-5">
-                                            <h2 class="fw-bolder">TiquePOS</h2>
-                                            <p>"Sistema avanzado de facturación electrónica diseñado para optimizar y automatizar el proceso de emisión de comprobantes electrónicos. Facilita el cumplimiento de las normativas fiscales, ofreciendo una plataforma segura y eficiente para gestionar las ventas y los documentos tributarios. Con TiquePOS, las empresas pueden mejorar su productividad y reducir errores en la facturación, proporcionando una experiencia de usuario intuitiva y confiable."</p>
+                    <!-- Client Projects Tab -->
+                    <div class="tab-pane fade" id="clients" role="tabpanel" aria-labelledby="clients-tab">
+                        <div class="row gx-5 justify-content-center">
+                            <div class="col-lg-11 col-xl-9 col-xxl-8">
+                                <!-- Client Project Card 1-->
+                                <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                                    <div class="card-body p-0">
+                                        <div class="d-flex align-items-center">
+                                            <div class="p-5">
+                                                <h2 class="fw-bolder">Proyecto Cliente 1</h2>
+                                                <p>Descripción del proyecto para cliente 1...</p>
+                                            </div>
+                                            <img class="img-fluid" src="assets/clientproject1.png" alt="..." />
                                         </div>
-                                        <img class="img-fluid" src="assets/tiquepos.png" alt="..." />
                                     </div>
                                 </div>
-                            </div>
-                            <!-- Project Card 2-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
-                                <div class="card-body p-0">
-                                    <div class="d-flex align-items-center">
-                                        <img class="img-fluid" src="assets/peruaprende.png" alt="..." />
-                                        <div class="p-5">
-                                            <h2 class="fw-bolder">Peruaprende</h2>
-                                            <p>"Es una plataforma de cursos en línea que ofrece una amplia variedad de contenidos educativos para fomentar el aprendizaje y el desarrollo profesional. Con una interfaz intuitiva y recursos actualizados, la plataforma permite a los usuarios adquirir nuevas habilidades y conocimientos desde cualquier lugar, adaptándose a sus propios ritmos y horarios. Peruaprende se enfoca en brindar educación accesible y de calidad para potenciar el crecimiento personal y laboral de sus usuarios."</p>
-                                        </div>     
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Project Card 3-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
-                                <div class="card-body p-0">
-                                    <div class="d-flex align-items-center">
-                                        <div class="p-5">
-                                            <h2 class="fw-bolder">iRentapp</h2>
-                                            <p>"Es un sistema diseñado para administrar de manera eficiente las reservas de autos de alquiler. Permite a las empresas gestionar su flota, programar reservas y supervisar el estado de cada vehículo en tiempo real. Con una interfaz intuitiva, iRentapp facilita el proceso de alquiler tanto para los administradores como para los clientes, optimizando la disponibilidad de vehículos y asegurando una experiencia de usuario fluida y confiable."</p>
+                                <!-- Client Project Card 2 -->
+                                <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                                    <div class="card-body p-0">
+                                        <div class="d-flex align-items-center">
+                                            <img class="img-fluid" src="assets/clientproject2.png" alt="..." />
+                                            <div class="p-5">
+                                                <h2 class="fw-bolder">Proyecto Cliente 2</h2>
+                                                <p>Descripción del proyecto para cliente 2...</p>
+                                            </div>
                                         </div>
-                                        <img class="img-fluid" src="assets/irentapp.png" alt="..." />
                                     </div>
                                 </div>
+                                <!-- Add other client project cards as needed -->
                             </div>
-                            <!-- Project Card 4-->
-                            <!-- <div class="card overflow-hidden shadow rounded-4 border-0">
-                                <div class="card-body p-0">
-                                    <div class="d-flex align-items-center">
-                                        <div class="p-5">
-                                            <h2 class="fw-bolder">ReservaBook</h2>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
-                                        </div>
-                                        <img class="img-fluid" src="/assets/proyecto2.png" alt="..." />
-                                    </div>
-                                </div>
-                            </div> -->
                         </div>
                     </div>
                 </div>
-            </section>
+            </div>
+        </section>
 
-            <!-- Call to action section-->
-            <section class="py-5 bg-gradient-primary-to-secondary text-white">
-                <div class="container px-5 my-5">
-                    <div class="text-center">
-                        <h2 class="display-4 fw-bolder mb-4">Construyamos algo juntos</h2>
-                        <a class="btn btn-outline-light btn-lg px-5 py-3 fs-6 fw-bolder" href="contact.html">Contáctame</a>
-                    </div>
-                </div>
-            </section>
-        </main>
-        <!-- Footer-->
-        <footer class="bg-white py-4 mt-auto">
-            <div class="container px-5">
-                <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="text-center">
-                        <div class="small m-0">Copyright &copy; 2024 | Todos los derechos reservados</div>
-                    </div>
+
+
+        <!-- Call to action section-->
+        <section class="py-5 bg-gradient-primary-to-secondary text-white">
+            <div class="container px-5 my-5">
+                <div class="text-center">
+                    <h2 class="display-4 fw-bolder mb-4">Construyamos algo juntos</h2>
+                    <a class="btn btn-outline-light btn-lg px-5 py-3 fs-6 fw-bolder" href="contact.html">Contáctame</a>
                 </div>
             </div>
-        </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-    </body>
+        </section>
+    </main>
+    <!-- Footer-->
+    <footer class="bg-white py-4 mt-auto">
+        <div class="container px-5">
+            <div class="row align-items-center justify-content-between flex-column flex-sm-row">
+                <div class="text-center">
+                    <div class="small m-0">Copyright &copy; 2024 | Todos los derechos reservados</div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
+</body>
+
 </html>
