Se agrega estructura de proyectos clientes

--- a/projects.html
+++ b/projects.html
@@ -127,11 +127,16 @@
                                 <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
                                     <div class="card-body p-0">
                                         <div class="d-flex align-items-center">
+                                            <img class="img-fluid" src="assets/peruaprende.png" alt="..." />
                                             <div class="p-5">
-                                                <h2 class="fw-bolder">Proyecto Cliente 1</h2>
-                                                <p>Descripción del proyecto para cliente 1...</p>
+                                                <h2 class="fw-bolder">Peruaprende</h2>
+                                                <p>"Es una plataforma de cursos en línea que ofrece una amplia variedad
+                                                    de contenidos educativos para fomentar el aprendizaje y el
+                                                    desarrollo profesional. Con una interfaz intuitiva y recursos
+                                                    actualizados, la plataforma permite a los usuarios adquirir nuevas
+                                                    habilidades y conocimientos desde cualquier lugar, adaptándose a sus
+                                                    propios ritmos y horarios."</p>
                                             </div>
-                                            <img class="img-fluid" src="assets/clientproject1.png" alt="..." />
                                         </div>
                                     </div>
                                 </div>
@@ -139,15 +144,36 @@
                                 <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
                                     <div class="card-body p-0">
                                         <div class="d-flex align-items-center">
-                                            <img class="img-fluid" src="assets/clientproject2.png" alt="..." />
+                                            <img class="img-fluid" src="assets/peruaprende.png" alt="..." />
                                             <div class="p-5">
-                                                <h2 class="fw-bolder">Proyecto Cliente 2</h2>
-                                                <p>Descripción del proyecto para cliente 2...</p>
+                                                <h2 class="fw-bolder">Peruaprende</h2>
+                                                <p>"Es una plataforma de cursos en línea que ofrece una amplia variedad
+                                                    de contenidos educativos para fomentar el aprendizaje y el
+                                                    desarrollo profesional. Con una interfaz intuitiva y recursos
+                                                    actualizados, la plataforma permite a los usuarios adquirir nuevas
+                                                    habilidades y conocimientos desde cualquier lugar, adaptándose a sus
+                                                    propios ritmos y horarios."</p>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <!-- Add other client project cards as needed -->
+                                <!-- Client Project Card 3 -->
+                                <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                                    <div class="card-body p-0">
+                                        <div class="d-flex align-items-center">
+                                            <img class="img-fluid" src="assets/peruaprende.png" alt="..." />
+                                            <div class="p-5">
+                                                <h2 class="fw-bolder">Peruaprende</h2>
+                                                <p>"Es una plataforma de cursos en línea que ofrece una amplia variedad
+                                                    de contenidos educativos para fomentar el aprendizaje y el
+                                                    desarrollo profesional. Con una interfaz intuitiva y recursos
+                                                    actualizados, la plataforma permite a los usuarios adquirir nuevas
+                                                    habilidades y conocimientos desde cualquier lugar, adaptándose a sus
+                                                    propios ritmos y horarios."</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
